[gd_scene load_steps=58 format=3 uid="uid://brqdky4e5qo2m"]

[ext_resource type="Script" uid="uid://cgd8cu0gu21l4" path="res://Assets/Enemies/enemy_2.gd" id="1_vi0hf"]
[ext_resource type="Script" uid="uid://clj5tjl6n5w51" path="res://Assets/Scripts/stats.gd" id="2_vi0hf"]
[ext_resource type="Texture2D" uid="uid://fvdfvcwxpuqp" path="res://Assets/Enemies/Skeletons_Free_Pack/Skeleton_Sword/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_01_Yellow_Attack1.png" id="3_ud2rd"]
[ext_resource type="Texture2D" uid="uid://c1yqf53mdyrrq" path="res://Assets/Enemies/Skeletons_Free_Pack/Skeleton_Sword/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_01_Yellow_Hurt.png" id="4_t3ldh"]
[ext_resource type="Texture2D" uid="uid://p67evupertiu" path="res://Assets/Enemies/Skeletons_Free_Pack/Skeleton_Sword/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_01_Yellow_Attack2.png" id="4_vi0hf"]
[ext_resource type="Texture2D" uid="uid://dm25bgoe7vfed" path="res://Assets/Enemies/Skeletons_Free_Pack/Skeleton_Sword/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_01_Yellow_Die.png" id="5_jftqg"]
[ext_resource type="Texture2D" uid="uid://c28qxscuybnrq" path="res://Assets/Enemies/Skeletons_Free_Pack/Skeleton_Sword/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_01_Yellow_Walk.png" id="6_agml2"]
[ext_resource type="Script" uid="uid://bhaiij1tfp7v6" path="res://Assets/Scripts/hurtbox.gd" id="7_dh5n1"]

[sub_resource type="Resource" id="Resource_ud2rd"]
script = ExtResource("2_vi0hf")
faction = 1
metadata/_custom_type_script = "uid://clj5tjl6n5w51"

[sub_resource type="CircleShape2D" id="CircleShape2D_t3ldh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fa6de"]
radius = 17.0
height = 34.0

[sub_resource type="AtlasTexture" id="AtlasTexture_aw3hv"]
atlas = ExtResource("3_ud2rd")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wd1q"]
atlas = ExtResource("3_ud2rd")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nygha"]
atlas = ExtResource("3_ud2rd")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2yp3s"]
atlas = ExtResource("3_ud2rd")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6ehl"]
atlas = ExtResource("3_ud2rd")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_02f1b"]
atlas = ExtResource("3_ud2rd")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekdi8"]
atlas = ExtResource("3_ud2rd")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4qsk"]
atlas = ExtResource("3_ud2rd")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0o3a"]
atlas = ExtResource("3_ud2rd")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kobke"]
atlas = ExtResource("3_ud2rd")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkrh3"]
atlas = ExtResource("4_t3ldh")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7tfn"]
atlas = ExtResource("4_t3ldh")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lt8np"]
atlas = ExtResource("4_t3ldh")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo7fv"]
atlas = ExtResource("4_t3ldh")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nu8pm"]
atlas = ExtResource("4_t3ldh")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vw204"]
atlas = ExtResource("5_jftqg")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efuk4"]
atlas = ExtResource("5_jftqg")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmp7x"]
atlas = ExtResource("5_jftqg")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6v6jv"]
atlas = ExtResource("5_jftqg")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqqyh"]
atlas = ExtResource("5_jftqg")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgass"]
atlas = ExtResource("5_jftqg")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrbsq"]
atlas = ExtResource("5_jftqg")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ko8cy"]
atlas = ExtResource("5_jftqg")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hralm"]
atlas = ExtResource("5_jftqg")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i86ar"]
atlas = ExtResource("6_agml2")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5l6o"]
atlas = ExtResource("6_agml2")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gqy7"]
atlas = ExtResource("6_agml2")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c2yf"]
atlas = ExtResource("6_agml2")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nxib"]
atlas = ExtResource("6_agml2")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rcax8"]
atlas = ExtResource("6_agml2")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0kee"]
atlas = ExtResource("6_agml2")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ks5o"]
atlas = ExtResource("6_agml2")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_85g7o"]
atlas = ExtResource("6_agml2")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xudsn"]
atlas = ExtResource("6_agml2")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud2rd"]
atlas = ExtResource("4_vi0hf")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3ldh"]
atlas = ExtResource("4_vi0hf")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jftqg"]
atlas = ExtResource("4_vi0hf")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_agml2"]
atlas = ExtResource("4_vi0hf")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dh5n1"]
atlas = ExtResource("4_vi0hf")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xupaa"]
atlas = ExtResource("4_vi0hf")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3xnk"]
atlas = ExtResource("4_vi0hf")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_340p4"]
atlas = ExtResource("4_vi0hf")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5proa"]
atlas = ExtResource("4_vi0hf")
region = Rect2(768, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_j4qsk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aw3hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wd1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nygha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2yp3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6ehl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02f1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekdi8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4qsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0o3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kobke")
}],
"loop": false,
"name": &"attack",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkrh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7tfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lt8np")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo7fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nu8pm")
}],
"loop": false,
"name": &"damage",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vw204")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efuk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmp7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6v6jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqqyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgass")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrbsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ko8cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hralm")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i86ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5l6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gqy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c2yf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nxib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcax8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0kee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ks5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_85g7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xudsn")
}],
"loop": true,
"name": &"move",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud2rd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3ldh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jftqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agml2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dh5n1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xupaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3xnk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_340p4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5proa")
}],
"loop": false,
"name": &"thrust",
"speed": 22.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yc8sv"]
radius = 15.0
height = 32.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n0o3a"]
radius = 184.29
height = 368.58

[node name="Enemy2" type="CharacterBody2D" node_paths=PackedStringArray("sprite", "nav") groups=["enemy"]]
scale = Vector2(0.66, 0.66)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_vi0hf")
sprite = NodePath("AnimatedSprite2D")
nav = NodePath("Nav")
stats = SubResource("Resource_ud2rd")
hitbox_shape = SubResource("CircleShape2D_t3ldh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_fa6de")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j4qsk")
animation = &"thrust"

[node name="hurtBox" type="Area2D" parent="AnimatedSprite2D"]
script = ExtResource("7_dh5n1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/hurtBox"]
shape = SubResource("CapsuleShape2D_yc8sv")

[node name="Nav" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true

[node name="Range" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Range"]
position = Vector2(-1, -1)
scale = Vector2(0.6, 0.6)
shape = SubResource("CapsuleShape2D_n0o3a")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
